--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <h1>Welcome to my first evva webpage!</h1>
+    <h2 style="color:red;">It's all sinking in and I am learning the git version control system</h2>
+    <h3 style="color:violet;">The best sources for this are Brian Yu and Corey Schafer</h3>
 </body>
 </html>
