Added styling to centre text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>GABBY'S PAGE</title>
     
 </head>
-<body>
+<body style="text-align:center;">
     <h1>Welcome to my first evva webpage!</h1>
     <h2 style="color:red;">It's all sinking in and I am learning the git version control system</h2>
     <h3 style="color:violet;">The best sources for this are Brian Yu and Corey Schafer</h3>
